--- a/src/app/pages/order/components/associations/association-order-detail/association-order-detail.component.html
+++ b/src/app/pages/order/components/associations/association-order-detail/association-order-detail.component.html
@@ -4,7 +4,7 @@
         <p class="fs-30 Tajawal-Bold my-0">الإطلاع على الطلب</p>
     </div>
     <div class="col-12">
-        <p class="fs-25 Tajawal-Medium my-2 greytxt-color">طلب وكيل رقم #{{data?.id}}</p>
+        <p class="fs-25 Tajawal-Medium my-2 my-sm-4 my-md-4 greytxt-color">طلب وكيل رقم #{{data?.id}}</p>
     </div>
 </div>
 
