--- a/src/app/pages/supplier/components/supplier-reviews/supplier-reviews.component.html
+++ b/src/app/pages/supplier/components/supplier-reviews/supplier-reviews.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="response?.length" class="row">
+<div *ngIf="response?.reviews?.length" class="row">
     <div class="col-12">
         <table class="table">
             <thead>
@@ -9,10 +9,10 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let item of  response | paginate:{
+            <tr *ngFor="let item of  response?.reviews | paginate:{
                 itemsPerPage : 10,
                 currentPage : page,
-                totalItems :  response?.length
+                totalItems :  response?.reviews?.length
             }; let i = index ">
                 <td>
                     <p class="blue-txt-color fs-22 Tajawal-Medium m-0">#{{item.order}}</p>
@@ -30,9 +30,17 @@
             </tbody>
         </table>
     </div>
+    <pagination-controls 
+    [autoHide]=" response?.reviews_count ? false : true"
+    [responsive]="true"
+    nextLabel = ">"
+    previousLabel ="<"
+    (pageChange)="page = $event">
+    </pagination-controls>
+
 </div>
 
-<div *ngIf="!response?.length" class="row mt-50">
+<div *ngIf="!response?.reviews?.length" class="row mt-50">
   <div class="col-12 text-center">
       <div>
           <i style="font-size: 100px; color: #E0E0E0;" class="pi pi-info-circle my-4"></i>
@@ -40,15 +48,6 @@
       <p class="Tajawal-Bold fs-28 my-2">لا يوجد لديك تقييمات حالياً</p>
   </div>
 </div>
-
-<pagination-controls 
-[autoHide]=" response?.length > 10 ? false : true"
-[responsive]="true"
- nextLabel = ">"
-previousLabel ="<"
-(pageChange)="page = $event">
-</pagination-controls>
-
 
 
 
