--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -8,7 +8,7 @@
 <!-- Category Section -->
 <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-10">
-        <swiper style="width: 95%;" [config]="swiperOption" [mousewheel]="true">
+        <swiper style="width: 95%;" [config]="swiperOption" [mousewheel]="false">
             <ng-container *ngFor="let item of allCategories">
                 <ng-template swiperSlide>
                     <label class="labl mx-2">
