--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,7 @@ a {
     display: none;
 }
 
+
 button:disabled {
     opacity: 0.5;
 }
@@ -111,7 +112,7 @@ Margins
 }
 
 /************************************************
-End Fonts
+End Margins
 ************************************************/
 
 
@@ -144,7 +145,7 @@ End Colors
 ************************************************/
 
 /************************************************
-Code Inptu
+Code Input
 ************************************************/
 
 code-input span {
