--- a/src/app/pages/transaction/components/orders/orders.component.css
+++ b/src/app/pages/transaction/components/orders/orders.component.css
@@ -1,279 +1,27 @@
 .btn-container{
-    width: 436px;
-    height: 61px;
-    background: #FDFDFD 0% 0% no-repeat padding-box;
-    box-shadow: 0px 3px 6px #272D3B33;
-    border-radius: 10px;
+  width: 436px;
+  height: 61px;
+  background: #FDFDFD 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #272D3B33;
+  border-radius: 10px;
 }
 
 .btn-container button{
-    border: 0;
-    background-color: transparent;
-    color: #007AFF;
-    width: 187px;
-    height: 42px;
-    border-radius: 8px;
+  border: 0;
+  background-color: transparent;
+  color: #007AFF;
+  width: 187px;
+  height: 42px;
+  border-radius: 8px;
 }
 .btn-container button.active{
-    background-color: #007AFF;
-    color: #F7F7F7;
+  background-color: #007AFF;
+  color: #F7F7F7;
 }
 
-.orders-info{
-    min-height: 70vh;
-    background: #F7F7F7 0% 0% no-repeat padding-box;
-    box-shadow: 0px 3px 6px #272D3B33;
-    border-radius: 10px;
-    padding: 20px;
+.chat-info{
+  background: #F7F7F7 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #272D3B33;
+  border-radius: 10px;
+  min-height: 60vh;
 }
-
-.orders-info .people-detai{
-    width: 272px;
-    height: 47px;
-    background: #FDFDFD 0% 0% no-repeat padding-box;
-    box-shadow: 0px 3px 6px #272D3B33;
-    border-radius: 10px;
-}
-
-.back-btn a{
-    text-decoration: none;
-    background-color: black;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  table {
-      width: 100%;
-      height: 192px;
-      margin: auto;
-      border-collapse: separate !important;
-      border-radius: 20px !important;
-      border-spacing: 0 !important;
-  }
-  
-  table thead{
-      background-color: #2A2A2C;
-      color: #F7F7F7;
-  }
-  
-  table thead tr th:last-child{
-      border-top-left-radius: 20px;
-      border-left-style: hidden;
-      border-top-style: hidden;
-  }
-  table thead tr th:first-child{
-      border-top-right-radius: 20px;
-      border-right-style: hidden;
-      border-top-style: hidden;
-  }
-  
-  table tbody tr td:last-child{
-      border-bottom-left-radius: 20px;
-  }
-  table tbody tr td:first-child{
-      border-bottom-right-radius: 20px;
-  }
-  
-  table tbody,table thead{
-      vertical-align: middle !important;
-      text-align: center;
-      height: 93px;
-      font-size: 20px;
-      font-family: "Tajawal-Bold";
-      font-weight: 700;
-  }
-  
-  th, td {
-      width: 100px;
-      border: 1px solid #9F9F9F;
-    }
-  
-    .border-left{
-      border-left: 2px solid #D6D6D6;
-    }
-  
-    .countdown-container .left-border::after{
-      content: "" !important;
-      width: 2px;
-      height: 78px;
-      background-color: #D6D6D6;
-      position: absolute;
-      left: 0;
-      top: 0;
-      bottom: 0;
-      margin: auto;
-    }
-  
-  
-  .wizard {
-    display: grid;
-    grid-template-columns: 320px 1fr;
-    font-family: "Roboto", sans-serif;
-  }
-  
-  .col-container {
-      width: 100%;
-      height: max-content;
-      min-height: 200px;
-      border: 2px solid #9F9F9F;
-      border-radius: 20px;
-      padding: 25px 3%;
-  }
-  
-  .col-container .card-detail{
-    width: 90%;
-    padding: 10px 18px;
-    border-radius: 20px;
-    background-color: #2A2A2C;
-  }
-  
-  .col-container .btn-action .cancel-btn , .col-container .btn-action .delievery-btn , .col-container .btn-action .send-rating-btn , .col-container .btn-action .return-btn ,.col-container .btn-action .confirm-payment-btn{
-      width: 90%;
-      height: 64px;
-      background: #1B1C1E 0% 0% no-repeat padding-box;
-      border-radius: 8px;
-      color: #F7F7F7;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  }
-  
-  .col-container .btn-action .download-reciet-btn{
-      width: 90%;
-      height: 68px;
-      background: #F7F7F7 0% 0% no-repeat padding-box;
-      box-shadow: 0px 3px 6px #00000029;
-      border-radius: 8px;
-      color: #B71212;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  }
-  
-  .col-container .img-detail .image-container{
-    cursor: pointer;
-  }
-  
-  .col-container .img-detail .image-container img{
-    width: 200px;
-    height: 142px;
-    box-shadow: 0px 3px 6px #00000029;
-    border-radius: 8px;
-  }
-  
-  .col-container .img-detail .image-container .img-overlay{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 36px;
-    background: #00000048 0% 0% no-repeat padding-box;
-    box-shadow: 0px 3px 6px #00000029;
-    opacity: 1;
-    backdrop-filter: blur(3px);
-    -webkit-backdrop-filter: blur(3px);
-  }
-  
-  .col-container .img-detail ::ng-deep .p-dialog {
-    box-shadow: none !important;
-  }
-  
-  
-  .col-container .img-detail ::ng-deep .p-dialog-header {
-    justify-content: start !important;
-    padding-left: 0 !important;
-    padding-right: 0 !important; 
-  }
-  
-  .col-container .img-detail ::ng-deep .p-dialog-content {
-    padding: 0 !important;
-  }
-  
-  .col-container .img-detail ::ng-deep .p-dialog .p-dialog-header , .col-container .img-detail ::ng-deep .p-dialog .p-dialog-content{
-    background:  transparent !important;
-  }
-  
-  .col-container .img-detail ::ng-deep .p-dialog .p-dialog-header .p-dialog-header-icon {
-    color: white !important;
-    background: black !important;
-  }
-  
-  .col-container .upload-img-detail .upload-image-container label{
-    width: 128px;
-    height: 44px;
-    background: #2A2A2C 0% 0% no-repeat padding-box;
-    box-shadow: 0px 7px 12px #2A2A2C4E;
-    border-radius: 33px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #F7F7F7;
-    cursor: pointer;
-  }
-  
-  .col-container .upload-img-detail .upload-image-container input{
-    display: none;
-  }
-  
-  .col-container .done-container{
-    width: 70%;
-    height: 80%;
-  }
-  
-  ::ng-deep .p-rating:not(.p-disabled):not(.p-readonly) .p-rating-icon:hover ,::ng-deep .p-rating .p-rating-icon.p-rating-icon-active  {
-    color: #F7CA36 ;
-  }
-  
-  ::ng-deep .p-rating .p-rating-icon{
-    color: black ;
-  }
-  
-  ::ng-deep .p-rating .p-rating-icon.p-icon {
-    width: 100%;
-    height: 25px;
-  }
-
-  ::ng-deep .p-accordion-header-link {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    -webkit-user-select: none;
-    user-select: none;
-    position: relative;
-    text-decoration: none;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-}
-
-  ::ng-deep .p-accordion-header-link .p-element.p-icon-wrapper{
-    width: 28px;
-    height: 28px;
-    border-radius: 50%;
-    color: white !important;
-    background: #2A2A2C 0% 0% no-repeat padding-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 !important;
-}
-
-  ::ng-deep .p-accordion-header-link .p-element.p-icon-wrapper svg{
-    margin: 0 !important;
-}
-
-  ::ng-deep .p-accordion-content{
-    background-color:  transparent  !important;
-  }
-
-  ::ng-deep .p-accordion-header .p-accordion-header-text{
-    color: #007AFF !important;
-    font-size: 22px;
-    font-family: 'Tajawal-Bold';
-    font-weight: 700;
-  }
-
-  ::ng-deep .p-accordion .p-accordion-header:not(.p-disabled) .p-accordion-header-link:focus {
-    box-shadow: none !important;
-  }
