--- a/src/app/pages/transaction/components/orders/orders.component.html
+++ b/src/app/pages/transaction/components/orders/orders.component.html
@@ -2,7 +2,7 @@
     <div class="col-12">
         <div class="btn-container d-flex justify-content-evenly align-items-center">
             <button class="Tajawal-Bold fs-16" [class.active]="setView == 'orders'" (click)="changeView('orders')">حالة الطلب</button>
-            <button class="Tajawal-Bold fs-16" [class.active]="setView == 'chats'" (click)="changeView('chats')">الدردشة</button>
+            <button [disabled]="!response?.chat_id" class="Tajawal-Bold fs-16" [class.active]="setView == 'chats'" (click)="changeView('chats')">الدردشة</button>
         </div>
     </div>
 </div>
@@ -10,204 +10,10 @@
 
 <div class="mt-30 h-100" [ngSwitch]="setView"> 
     <div class="orders-info" *ngSwitchCase="'orders'">
-        <div class="row mt-2">
-            <div class="col-sm-12 col-md-12 col-lg-3  my-2 my-lg-0">
-                <p class="Tajawal-Bold fs-16 blue-txt-color">الأطراف</p>
-                <div class="people-detai my-2 d-flex align-items-center">
-                    <span class="blue-txt-color mx-2 Tajawal-Bold">العميل</span>
-                    <span class="Tajawal-Bold me-3">{{response?.client}}</span>
-                </div>
-                <div class="people-detai my-2 d-flex align-items-center">
-                    <span class="blue-txt-color mx-2 Tajawal-Bold">المورد</span>
-                    <span class="Tajawal-Bold me-3">{{response?.supplier}}</span>
-                </div>
-            </div>
-
-            <div class="col-sm-12 col-md-12 col-lg-9 pe-5 my-2 my-lg-0">
-                    <!-- Table Row -->
-                <div class="row">
-                    <div class="col-12">
-                        <div class="table-detail">
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th>رقم الطلب</th>
-                                        <th>تاريخه</th>
-                                        <th>اسم المشروع</th>
-                                        <th>المنتج</th>
-                                        <th>الكمية</th>
-                                        <th>مقدم الطلب</th>
-                                        <th>المورد</th>
-                                        <th>حالة الطلب</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>{{response?.id}}#</td>
-                                        <td>{{response?.created_at?.split('T')[0]}}</td>
-                                        <td>{{response?.location?.project_name}}</td>
-                                        <td>{{response?.supplier_product}}</td>
-                                        <td>{{response?.amount}}</td>
-                                        <td>{{response?.client}}</td>
-                                        <td>{{response?.supplier}}</td>
-                                        <td [class.red-color]="response?.status.includes('بانتظار')" [class.green-txt-color]="!response?.status.includes('بانتظار')">{{response?.status}}</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-                        
-        <!-- detail row -->
-        <div class="row mt-50">
-            <div style="height: 46px;" class="col-sm-12 col-md-6 col-lg-3 border-left d-flex align-items-center">
-                    <div><p class="Tajawal-Bold fs-16 my-0">تفاصيل الطلب:</p></div>
-                    <div class="d-flex justify-content-between align-items-center" style="margin-right: 20px;">
-                        <p class="Tajawal-Bold fs-16 blue-txt-color my-0"> تكلفة المنتجات:</p>
-                        <p class="Tajawal-Bold fs-16 me-2 my-0">{{response?.price_before_vat}}</p>
-                    </div>
-            </div>
-            <div style="height: 46px;" class="col-sm-12 col-md-6 col-lg-4 border-left d-flex justify-content-center align-items-center">
-                <div class="d-flex justify-content-between align-items-center">
-                    <p class="Tajawal-Bold fs-16 blue-txt-color my-0"> ضريبة القيمة المضافة 15% :</p>
-                    <p class="Tajawal-Bold fs-16 me-2 my-0">{{response?.vat}}</p>
-                </div>
-            </div>
-            <div style="height: 46px;" class="col-sm-12 col-md-6 col-lg-3 border-left d-flex justify-content-center align-items-center">
-                <div class="d-flex justify-content-between align-items-center">
-                    <p class="Tajawal-Bold fs-16 blue-txt-color my-0">السعر شامل الضريبة:</p>
-                    <p class="Tajawal-Bold fs-16 me-2 my-0">{{response?.total}}</p>
-                </div>
-            </div>
-            <div style="height: 46px;" class="col-sm-12 col-md-6 col-lg-2 d-flex justify-content-center align-items-center">
-                <div class="d-flex justify-content-between align-items-center">
-                    <p class="Tajawal-Bold fs-16 green-txt-color my-0">التوصيل الى:</p>
-                    <p class="Tajawal-Bold fs-16 me-2 my-0">{{response?.location?.project_name}}</p>
-                </div>
-            </div>
-        </div>
-        
-        <div class="row mt-30">
-            <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
-                <p class="Tajawal-Bold fs-16 green-txt-color my-0">حارس المشروع</p>
-                <p class="Tajawal-Bold fs-16 me-2">{{response?.location?.guard_mobile}}</p>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
-                <p class="Tajawal-Bold fs-16 green-txt-color my-0">موقع المشروع</p>
-                <a style="text-decoration: none;" href="{{response?.location?.google_maps_link}}" target="_blank" class="Tajawal-Bold fs-16 me-2">Google Map</a>
-            </div>
-        </div>
-
-        <div class="row mt-2">
-            <div class="col-10">
-                <p-accordion [activeIndex]="-1">
-                    <p-accordionTab header="تفاصيل الطلب">
-                                        <!-- Row For Reciet Order -->
-                <div *ngIf="response?.step == 1 || response?.step > 1" class="row col-container mt-30 align-items-center">
-                    <div class="col-sm-12 col-md-12 col-lg-8 reciet-detail">
-                        <p class="Tajawal-Bold fs-25 blue-txt-color">فاتورة الطلب</p>
-                        <div class="d-flex align-items-center">
-                            <div class="d-flex align-items-center">
-                                <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">تاريخ الإصدار</p>
-                                <p class="my-0 Tajawal-Bold fs-25 me-3">{{response?.created_at?.split('T')[0]}}</p>
-                            </div>
-                            <div class="d-flex align-items-center mx-5">
-                                <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">وقت الإصدار</p>
-                                <p class="my-0 Tajawal-Bold fs-25 me-3">{{response?.created_at?.split('T')[1]?.split('.')[0]}}</p>
-                            </div>
-    
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4 btn-action my-2 my-lg-0">
-                        <a class="btn download-reciet-btn Tajawal-Bold fs-25">تحميل الفاتورة
-                            <i class="pi pi-download me-5 fs-3"></i>
-                        </a>
-                    </div>
-                 </div>
-                 <!-- End Row For Reciet Order -->
-    
-                <!-- Row For delievery Order Details -->
-                <div *ngIf="response?.step == 1 || response?.step > 1" class="row col-container align-items-center mt-30">
-                    <div class="col-sm-12 col-md-12 col-lg-7 reciet-detail">
-                        <p class="Tajawal-Bold fs-25 blue-txt-color">معلومات التوصيل</p>
-                        <div class="d-flex align-items-center">
-                            <div class="d-flex align-items-center">
-                                <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">تاريخ التوصيل</p>
-                                <p class="my-0 Tajawal-Bold fs-25 me-3">{{response?.delivered_at?.split('T')[0]}}</p>
-                            </div>
-                            <div class="d-flex align-items-center me-5">
-                                <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">وقت التوصيل</p>
-                                <p class="my-0 Tajawal-Bold fs-25 me-3">{{response?.delivered_at?.split('T')[1]?.split('.')[0]}}</p>
-                            </div>
-    
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-5 img-detail d-flex align-items-center my-2 my-lg-0">
-                        <p class="my-0 Tajawal-Bold fs-25 green-txt-color">تم توصيل الطلب</p>
-                        <div (click)="showDialog()" class="image-container position-relative mx-3">
-                                <img src="assets/dummy.png" alt="img">
-                                <div class="img-overlay d-flex justify-content-center align-items-center">
-                                    <i class="pi pi-search-plus text-white fs-2"></i>
-                                </div>
-                        </div>
-                        <p-dialog [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
-                           <img src="assets/dummy.png" width="100%" alt="img">
-                       </p-dialog>
-                    </div>
-                 </div>
-                <!-- End Row For delievery Order Details -->
-    
-    
-                <!-- Row For payment Order Details -->
-                <div *ngIf="response?.step == 1" class="row col-container align-items-center mt-30">
-                    <p class="Tajawal-Bold fs-25 blue-txt-color">وسائل الدفع للمورد</p>
-                    <div *ngFor="let card of response?.payment_info" class="col-12 col-md-12 col-lg-12 my-2 my-lg-0">
-                        <div class="card-detail">
-                            <div class="d-flex justify-content-between">
-                                <p class="Tajawal-Medium fs-22 text-white">{{card?.bank}}</p>
-                                <p class="Tajawal-Medium fs-20 text-white">{{card?.account_owner_name}}</p>
-                            </div>
-                            <div class="card-number">
-                                <p style="text-align: left;" class="Tajawal-Medium fs-22 text-white">{{card?.account_number}}</p>
-                            </div>
-                            <div class="iban">
-                                <p class="Tajawal-Medium fs-16 text-white">الايبان : {{card?.iban}} </p>
-                            </div>
-                        </div>
-                    </div>
-                 </div>
-                <!-- End Row For payment Order Details -->
-    
-                <!-- Row For payment Order Details -->
-                <div *ngIf="response?.step == 2 || response?.step > 2" class="row col-container align-items-center mt-30">
-                    <div class="col-sm-12 col-md-12 col-lg-8 reciet-detail">
-                        <div class="d-flex align-items-center">
-                            <p class="Tajawal-Bold fs-25 blue-txt-color my-0">تأكيد الدفع</p>
-                            <div class="me-5 d-flex align-items-center">
-                                <p class="Tajawal-Bold fs-25 green-txt-color my-0">قام بالدفع</p>
-                                <p class="Tajawal-Bold fs-25 my-0  me-3">{{response?.client}}</p>
-                            </div>
-                        </div>
-                        <div class="d-flex align-items-center mt-2">
-                            <div class="d-flex align-items-center">
-                                <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">تاريخ الدفع</p>
-                                <p class="my-0 Tajawal-Bold fs-25 me-3">{{response?.paid_at?.split('T')[0]}}</p>
-                            </div>
-                            <div class="d-flex align-items-center me-5">
-                                <p class="my-0 Tajawal-Bold fs-25 blue-txt-color">وقت الدفع</p>
-                                <p class="my-0 Tajawal-Bold fs-25 me-3">{{response?.paid_at?.split('T')[1]?.split('.')[0]}}</p>
-                            </div>
-    
-                        </div>
-                    </div>
-                 </div>
-                <!-- End Row For payment Order Details -->
-                    </p-accordionTab>
-                </p-accordion>
-           </div>
-        </div>
+        <app-order-details [response]="response"></app-order-details>
+    </div>
+    <div class="chat-info" *ngSwitchCase="'chats'">
+    <app-chat-details  [id]="response?.chat_id"></app-chat-details>
     </div>
 </div>
 
