--- a/src/app/pages/transaction/components/chat-details/chat-details.component.css
+++ b/src/app/pages/transaction/components/chat-details/chat-details.component.css
@@ -10,6 +10,7 @@
     grid-gap: 1rem;
     margin: auto;
     padding: 30px;
+    min-height: 450px;
     max-height: 580px;
     overflow-y: scroll;
     direction: ltr;
@@ -41,6 +42,7 @@
     max-width: 50%;
     overflow-wrap: break-word;
     text-align: center;
+    margin: auto 0;
   }
   
   .received {
