--- a/src/app/pages/transaction/transaction.component.css
+++ b/src/app/pages/transaction/transaction.component.css
@@ -68,3 +68,9 @@
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
+  a.disabled{
+    pointer-events: none;
+    cursor: not-allowed;
+    background-color: #8f8f8f !important;
+}
