--- a/src/app/pages/supplier/components/supplier-reviews/supplier-reviews.component.html
+++ b/src/app/pages/supplier/components/supplier-reviews/supplier-reviews.component.html
@@ -33,6 +33,7 @@
     <pagination-controls 
     [autoHide]=" response?.reviews_count ? false : true"
     [responsive]="true"
+    [maxSize]="5"
     nextLabel = ">"
     previousLabel ="<"
     (pageChange)="page = $event">
