--- a/src/app/pages/transaction/components/order-details/order-details.component.html
+++ b/src/app/pages/transaction/components/order-details/order-details.component.html
@@ -108,8 +108,8 @@
 
                 </div>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-4 btn-action my-2 my-lg-0">
-                <a class="btn download-reciet-btn Tajawal-Bold fs-25">تحميل الفاتورة
+            <div *ngIf="response?.payment_image" class="col-sm-12 col-md-12 col-lg-4 btn-action my-2 my-lg-0">
+                <a href="{{response?.payment_image}}" target="_blank" class="btn download-reciet-btn Tajawal-Bold fs-25">تحميل الفاتورة
                     <i class="pi pi-download me-5 fs-3"></i>
                 </a>
             </div>
@@ -132,16 +132,16 @@
 
                 </div>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-5 img-detail d-flex align-items-center my-2 my-lg-0">
+            <div class="col-sm-12 col-md-12 col-lg-5 img-detail d-flex justify-content-evenly align-items-center my-2 my-lg-0">
                 <p class="my-0 Tajawal-Bold fs-25 green-txt-color">تم توصيل الطلب</p>
-                <div (click)="showDialog()" class="image-container position-relative mx-3">
-                        <img src="assets/dummy.png" alt="img">
+                <div *ngIf="response?.proof_image" (click)="showDialog()" class="image-container position-relative ">
+                        <img src="{{response?.proof_image}}" alt="img">
                         <div class="img-overlay d-flex justify-content-center align-items-center">
                             <i class="pi pi-search-plus text-white fs-2"></i>
                         </div>
                 </div>
                 <p-dialog [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }" [draggable]="false" [resizable]="false">
-                   <img src="assets/dummy.png" width="100%" alt="img">
+                   <img src="{{response?.proof_image}}" width="100%" alt="img">
                </p-dialog>
             </div>
          </div>
@@ -151,17 +151,17 @@
         <!-- Row For payment Order Details -->
         <div *ngIf="response?.step == 1" class="row col-container align-items-center mt-30">
             <p class="Tajawal-Bold fs-25 blue-txt-color">وسائل الدفع للمورد</p>
-            <div *ngFor="let card of response?.payment_info" class="col-12 col-md-12 col-lg-12 my-2 my-lg-0">
-                <div class="card-detail">
+            <div *ngFor="let card of response?.payment_info" class="col-sm-12 col-md-12 col-lg-6 my-2 my-lg-0">
+                <div style="width: 80%;" class="card-detail mx-auto">
                     <div class="d-flex justify-content-between">
                         <p class="Tajawal-Medium fs-22 text-white">{{card?.bank}}</p>
                         <p class="Tajawal-Medium fs-20 text-white">{{card?.account_owner_name}}</p>
                     </div>
                     <div class="card-number">
-                        <p style="text-align: left;" class="Tajawal-Medium fs-22 text-white">{{card?.account_number}}</p>
+                        <p style="text-align: center;" class="Tajawal-Medium fs-22 text-white">{{card?.account_number}}</p>
                     </div>
                     <div class="iban">
-                        <p class="Tajawal-Medium fs-16 text-white">الايبان : {{card?.iban}} </p>
+                        <p class="Tajawal-Medium fs-16 text-white">الايبان : SA{{card?.iban}} </p>
                     </div>
                 </div>
             </div>
