--- a/src/app/pages/client/components/locations/locations.component.html
+++ b/src/app/pages/client/components/locations/locations.component.html
@@ -34,6 +34,7 @@
     <pagination-controls 
     [autoHide]="allLocation?.length > 8 ? false : true"
     [responsive]="true"
+    [maxSize]="5"
     nextLabel = ">"
     previousLabel ="<"
     (pageChange)="page = $event">
