--- a/src/app/pages/product/components/view-products/view-products.component.html
+++ b/src/app/pages/product/components/view-products/view-products.component.html
@@ -1,60 +1,13 @@
 <div class="view-products h-100">
     <!-- Boxes View -->
 <div *ngIf="styleView == 'boxesView' && allProductList?.length">
-    <div class="row my-2">
-        <div class="col-sm-12 col-md-6 col-lg-2 px-2 mt-3" *ngFor="let item of allProductList | paginate:{
-            itemsPerPage : 18,
-            currentPage : page,
-            totalItems : allProductList?.length
-        }; let i = index ">
-            <div class="boxesProduct-container">
-                <img style="border-radius: 7px;" [src]="item.pic" alt="product item" width="100%" height="107px">
-                <p class="Tajawal-Bold fs-20 mt-2 mb-0 text-center">{{item.title}}</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="mt-3">
-        <pagination-controls 
-            [autoHide]="allProductList.length > 18 ? false : true"
-            [responsive]="true"
-             nextLabel = ">"
-            previousLabel ="<"
-            (pageChange)="page = $event">
-        </pagination-controls>
-    </div>
+    <app-boxes-view [allProductList]="allProductList"></app-boxes-view>
 </div>
 <!-- End Boxes View -->
 
 <!-- Rows View -->
 <div *ngIf="styleView == 'rowsView' && allProductList?.length">
-    <div class="row my-2">
-        <div class="col-sm-12 col-md-12 col-lg-6 px-4 mt-3" *ngFor="let item of allProductList | paginate:{
-            itemsPerPage : 12,
-            currentPage : page,
-            totalItems : allProductList?.length
-        }; let i = index ">
-            <div class="rowsProduct-container d-flex align-items-center justify-content-between">
-                <div class="d-flex align-items-center">
-                    <img style="border-radius: 7px;" [src]="item.pic" alt="product item" width="80px" height="60px">
-                    <p class="Tajawal-Bold fs-20 my-0 mx-3">{{item.title}}</p>
-                </div>
-                <div class="delete-btn-container">
-                    <button class="delete-btn" (click)="handleShowCard($event,item)"><i class="pi pi-trash fs-5"></i></button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="mt-3">
-        <pagination-controls 
-             [autoHide]="allProductList.length > 12 ? false : true"
-            [responsive]="true"
-             nextLabel = ">"
-            previousLabel ="<"
-            (pageChange)="page = $event">
-        </pagination-controls>
-    </div>
+    <app-rows-view [allProductList]="allProductList" (realodProduct)="reloadProduct($event)"></app-rows-view>
 </div>
 <!-- End Rows View -->
 </div>
