--- a/src/app/pages/supplier/components/supplier-commision/supplier-commision.component.html
+++ b/src/app/pages/supplier/components/supplier-commision/supplier-commision.component.html
@@ -32,6 +32,7 @@
     <pagination-controls 
     [autoHide]=" response?.length ? false : true"
     [responsive]="true"
+    [maxSize]="5"
     nextLabel = ">"
     previousLabel ="<"
     (pageChange)="page = $event">
