--- a/src/app/pages/supplier/components/supplier-money-info/supplier-money-info.component.html
+++ b/src/app/pages/supplier/components/supplier-money-info/supplier-money-info.component.html
@@ -12,7 +12,7 @@
                         <p class="text-white text-center fs-28 Tajawal-Medium">{{item?.account_number}}</p>
                     </div>
                     <div class="card_bank_iban d-flex justify-content-between align-items-center">
-                        <p class="text-white my-auto fs-20 Tajawal-Bold">الايبان : {{item?.iban}}</p>
+                        <p class="text-white my-auto fs-20 Tajawal-Bold">الايبان : SA{{item?.iban}}</p>
                         <img src="assets/logo.png" width="65px" alt="logo">
                     </div>
                 </div>
@@ -37,10 +37,11 @@
                     <div class="d-flex align-items-center position-relative">
                         <i class="pi pi-credit-card fs-3"></i>
                         <span class="required_sympol text-danger">*</span>
-                        <input class="form-control" required type="text" pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|[25][1-7][0-9]{14}|6(?:011|5[0-9][0-9])[0-9]{12}|3[47][0-9]{13}|3(?:0[0-5]|[68][0-9])[0-9]{11}|(?:2131|1800|35\d{3})\d{11})$" #account_number="ngModel" ngModel  name="account_number" id="account_number" placeholder="رقم الحساب">
+                        <!-- <input class="form-control" required type="text" pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|[25][1-7][0-9]{14}|6(?:011|5[0-9][0-9])[0-9]{12}|3[47][0-9]{13}|3(?:0[0-5]|[68][0-9])[0-9]{11}|(?:2131|1800|35\d{3})\d{11})$" #account_number="ngModel" ngModel  name="account_number" id="account_number" placeholder="رقم الحساب"> -->
+                        <input class="form-control" required type="text" onkeypress="return event.charCode >= 48 && event.charCode <= 57" #account_number="ngModel" ngModel  name="account_number" id="account_number" placeholder="رقم الحساب">
                     </div>
                     <div class="me-5 mt-2" *ngIf="account_number.touched && account_number.invalid">
-                        <p class="text-danger" *ngIf="account_number.errors?.['pattern']">تأكد من صحة الرقم</p>
+                        <!-- <p class="text-danger" *ngIf="account_number.errors?.['pattern']">تأكد من صحة الرقم</p> -->
                     </div>
                 </div>
                 <div class="bank_name my-5">
@@ -54,11 +55,12 @@
                     <div class="d-flex align-items-center position-relative">
                         <i class="pi pi-credit-card fs-3"></i>
                         <span class="required_sympol text-danger">*</span>
-                        <input class="form-control" required type="text" pattern="\bSA[0-9]{4}[A-Z0-9]{18}\b" ngModel #iban="ngModel" name="iban" id="iban" placeholder="الايبان">
+                        <!-- <input class="form-control" required type="text" pattern="\bSA[0-9]{4}[A-Z0-9]{18}\b" ngModel #iban="ngModel" name="iban" id="iban" placeholder="الايبان"> -->
+                        <input class="form-control" required type="text" onkeypress="return event.charCode >= 48 && event.charCode <= 57" ngModel #iban="ngModel" name="iban" id="iban" placeholder="الايبان">
                         <p class="blue-txt-color fs-28 Tajawal-Bold my-auto me-3">SA</p>
                     </div>
                     <div class="me-5 mt-2" *ngIf="iban.touched && iban.invalid">
-                        <p class="text-danger" *ngIf="iban.errors?.['pattern']">تأكد من صحة الرقم</p>
+                        <!-- <p class="text-danger" *ngIf="iban.errors?.['pattern']">تأكد من صحة الرقم</p> -->
                     </div>
                 </div>
                 <div class="action-btn">
